@@ -1,3 +1,10 @@
+2008-07-22  Lennart Poettering   <lpoetter@redhat.com>
+
+	Fixes bug #541420
+
+	* schemas/desktop_gnome_sound.schemas.in: add two new event sounds
+	settings to gconf schema files.
+
 2008-07-17  Jeffrey Stedfast  <fejj@novell.com>
 
 	* libgnome/gnome-sound.c (send_all): Check for EAGAIN too (thanks
